# root_array_of_pointers

./: CMakeLists.txt  foo.h  inline_vector.h  main.cc  selection.xml
